@@ -73,6 +73,8 @@ Trunk (unreleased changes)
 
     AVRO-169.  Fix a typo in the spec. (Jeff Hammerbacher via cutting)
 
+    AVRO-189. test-c target fails (massie)
+
 Avro 1.2.0 (14 October 2009)
 
   INCOMPATIBLE CHANGES
